cluster/apps/networking/static-routes/lochnas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lochnas
  namespace: networking
spec:
  type: ExternalName

  ports:
    - name: https
      port: 5001

  externalName: lochnas.local
