cluster/apps/networking/static-routes/lochnas/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lochnas
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:nas
    hajimari.io/group: storage, database, and messaging

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lochnas.${SECRET_CLUSTER_DOMAIN}

  rules:
    - host: lochnas.${SECRET_CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lochnas
                port:
                  name: https
